# gaus-takehome

./: .env.example  .gitignore  README.md  run_dev.py
server/: Cargo.toml
server/src/: app.rs  main.rs
server/src/client/: mod.rs  stock.rs
server/src/finance/: mod.rs
server/src/web/: mod.rs
server/src/web/routing/: mod.rs  stock.rs
server/src/web/util/: mod.rs  valid_json.rs
website/: package.json
website/src/routes/: +layout.svelte  +page.svelte
