[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"]}
tower-http = { version = "0.6.6", features = ["trace", "add-extension", "cors", "fs", "auth"]}
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
chrono = "^0.4"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

garde = { version = "0.22.0", features = ["full"] }
claude-client = "0.3.1"
dotenv = "0.15.0"
regex="^1"
reqwest = "0.12.24"
reqwest-tracing = "0.5.8"
reqwest-middleware = "0.4.2"